@startuml

left to right direction
hide methods
skinparam Linetype ortho
skinparam classAttributeIconSize 0

class TaskGroup
{
    - Long id
    - Short version
    - String name
    - String description
    - Set<TaskBean> tasks
}

class Task
{
    - Long id
    - Short version
    - String name
    - String description
    - LocalDate start
    - LocalDate end
    - Boolean closed
    - TaskGroupBean taskGroup
    - TaskBean superTask
    - Set<TaskBean> subTasks
    - Set<TaskBean> predecessors
    - Set<TaskBean> successors
}

TaskGroup "1" ---> "*" Task      : tasks
Task      "*" ---> "1" TaskGroup : taskGroup

Task "1" --down-->  "*" Task : subTasks
Task "*" --up-->    "1" Task : top-to-top
Task "1" --left-->  "*" Task : predecessors
Task "1" --right--> "*" Task : successors

@enduml